2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* notify-sharp/Makefile.am:
	* src/Makefile.am: Use an external notify-sharp if available. This
	is most important as the DBus interface of notification-daemon changes
	soonish and a notify-sharp is required for this.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/last-exit.exe.config.in: Add a few missing dllmaps.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/PlayerWindow.cs: Use Bacon.VolumeButton instead of just
	VolumeButton. Gtk# 2.12 has it's own VolumeButton now creating an
	ambiguous reference between the two and failing the build.

2008-02-24  Brandon Hale <brandon@brandonhale.us>

	* AUTHORS, COPYING:
	Updates, taken from Debian package. Thanks to Bob Mauchin on bug
	#496016.

	* Bug #448927:
	Crash when searching for a station due to differing locale handling of
	decimal numbers. Patch from Bob Mauchin.

	* Bug #465549:
	Another crash on matching strings on search. Patch from Bob Mauchin.

2008-02-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Add nb to ALL_LINGUAS.

2007-12-26  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.ac: Added Portuguese (pt) to ALL_LINGUAS.

2007-10-26  iain <iain@gnome.org>

	* src/Makefile.am: Add the Playlist.cs file

	* Player.cs, PlayerWindow.cs: Rename Playlist property to Plist.

2007-10-14  Brandon Hale <brandon@brandonhale.us>

	Patch from Lukasz Jernas on bug #470417 to improve the icon install
	behaviour.

2007-10-14  Brandon Hale <brandon@brandonhale.us>

	Patch from Thomas Wendt on bug #483359.
	Support the latest last.fm protocols for playlists and scrobbling
	tracks. This adds or changes a good bit of code, so please test away.

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.ac: Added 'oc' to ALL_LINGUAS.

2007-09-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * configure.ac: Added es to ALL_LINGUAS

2007-09-08  Brandon Hale  <brandon@brandonhale.us>
