@@ -1,3 +1,8 @@
+2008-02-24  Brandon Hale <brandon@brandonhale.us>
+	
+	Properly dispose of gstreamer element when shutting down.
+	Gnome Bug #524124, fix from Jordan Callicoat.
+
 2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* configure.ac:
